quickstarts/microsoft.databricks/databricks-all-in-one-template-for-vnet-injection-privateendpoint-default-storage-firewall-with-natgateway/azuredeploy.json
{
  "$schema": "https://schema.management.azure.com/schemas/2019-04-01/deploymentTemplate.json#",
  "contentVersion": "1.0.0.0",
  "metadata": {
    "_generator": {
      "name": "bicep",
      "version": "0.28.1.47646",
      "templateHash": "9079454956970910406"
    }
  },
  "parameters": {
    "disablePublicIp": {
      "type": "bool",
      "defaultValue": true,
      "metadata": {
        "description": "Specifies whether to deploy Azure Databricks workspace with secure cluster connectivity (SCC) enabled or not (No Public IP)."
      }
    },
    "location": {
      "type": "string",
      "defaultValue": "[resourceGroup().location]",
      "metadata": {
        "description": "Location for all resources."
      }
    },
    "nsgName": {
      "type": "string",
      "defaultValue": "databricks-nsg",
      "metadata": {
        "description": "The name of the network security group to create."
      }
    },
    "pricingTier": {
      "type": "string",
      "defaultValue": "premium",
      "allowedValues": [
        "trial",
        "standard",
        "premium"
      ],
      "metadata": {
        "description": "The pricing tier of workspace."
      }
    },
    "privateSubnetCidr": {
      "type": "string",
      "defaultValue": "10.179.0.0/18",
      "metadata": {
        "description": "CIDR range for the private subnet."
      }
    },
    "privateSubnetName": {
      "type": "string",
      "defaultValue": "private-subnet",
      "metadata": {
        "description": "The name of the private subnet to create."
      }
    },
    "publicNetworkAccess": {
      "type": "string",
      "defaultValue": "Disabled",
      "allowedValues": [
        "Enabled",
        "Disabled"
      ],
      "metadata": {
        "description": "Indicates whether public network access is allowed to the workspace with private endpoint - possible values are Enabled or Disabled."
      }
    },
    "publicSubnetCidr": {
      "type": "string",
      "defaultValue": "10.179.64.0/18",
      "metadata": {
        "description": "CIDR range for the public subnet."
      }
    },
    "privateEndpointSubnetCidr": {
      "type": "string",
      "defaultValue": "10.179.128.0/24",
      "metadata": {
        "description": "CIDR range for the private endpoint subnet.."
      }
    },
    "publicSubnetName": {
      "type": "string",
      "defaultValue": "public-subnet",
      "metadata": {
        "description": "The name of the public subnet to create."
      }
    },
    "requiredNsgRules": {
      "type": "string",
      "defaultValue": "NoAzureDatabricksRules",
      "allowedValues": [
        "AllRules",
        "NoAzureDatabricksRules"
      ],
      "metadata": {
        "description": "Indicates whether to retain or remove the AzureDatabricks outbound NSG rule - possible values are AllRules or NoAzureDatabricksRules."
      }
    },
    "vnetCidr": {
      "type": "string",
      "defaultValue": "10.179.0.0/16",
      "metadata": {
        "description": "CIDR range for the vnet."
      }
    },
    "vnetName": {
      "type": "string",
      "defaultValue": "databricks-vnet",
      "metadata": {
        "description": "The name of the virtual network to create."
      }
    },
    "PrivateEndpointSubnetName": {
      "type": "string",
      "defaultValue": "default",
      "metadata": {
        "description": "The name of the subnet to create the private endpoint in."
      }
    },
    "accessConnectorName": {
      "type": "string",
      "defaultValue": "default",
      "metadata": {
        "description": "The name of the access connector to create."
      }
    },
    "natGatewayName": {
        "type": "string",
        "defaultValue": "nat-gateway",
        "metadata": {
            "description": "Name of the NAT gateway to be attached to the workspace subnets."
        }
      },
    "publicIpName": {
        "type": "string",
        "defaultValue": "nat-gw-public-ip",
        "metadata": {
              "description": "Name of the Public IP associated with the NAT gateway."
        }
    },
    "workspaceName": {
      "type": "string",
      "defaultValue": "default-ckheeh",
      "metadata": {
        "description": "The name of the Azure Databricks workspace to create."
      }
    }
  },
  "variables": {
    "managedResourceGroupName": "[format('databricks-rg-{0}-{1}', parameters('workspaceName'), uniqueString(parameters('workspaceName'), resourceGroup().id))]",
    "trimmedMRGName": "[substring(variables('managedResourceGroupName'), 0, min(length(variables('managedResourceGroupName')), 90))]",
    "managedResourceGroupId": "[format('{0}/resourceGroups/{1}', subscription().id, variables('trimmedMRGName'))]",
    "privateEndpointName": "[format('{0}-pvtEndpoint', parameters('workspaceName'))]",
    "privateDnsZoneName": "privatelink.azuredatabricks.net",
    "pvtEndpointDnsGroupName": "[format('{0}/mydnsgroupname', variables('privateEndpointName'))]"
  },
  "resources": [
    {
      "type": "Microsoft.Databricks/accessConnectors",
      "apiVersion": "2024-05-01",
      "name": "[parameters('accessConnectorName')]",
      "location": "[parameters('location')]",
      "identity": {
        "type": "SystemAssigned"
      },
      "properties": {}
    },
    {
      "type": "Microsoft.Network/networkSecurityGroups",
      "apiVersion": "2021-03-01",
      "name": "[parameters('nsgName')]",
      "location": "[parameters('location')]",
      "properties": {
        "securityRules": [
          {
            "name": "Microsoft.Databricks-workspaces_UseOnly_databricks-worker-to-worker-inbound",
            "properties": {
              "description": "Required for worker nodes communication within a cluster.",
              "protocol": "*",
              "sourcePortRange": "*",
              "destinationPortRange": "*",
              "sourceAddressPrefix": "VirtualNetwork",
              "destinationAddressPrefix": "VirtualNetwork",
              "access": "Allow",
              "priority": 100,
              "direction": "Inbound"
            }
          },
          {
            "name": "Microsoft.Databricks-workspaces_UseOnly_databricks-worker-to-databricks-cp",
            "properties": {
              "description": "Required for workers communication with Databricks control plane.",
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "destinationPortRanges": [
                "443",
                "8443-8451",
                "3306"
              ],
              "sourceAddressPrefix": "VirtualNetwork",
              "destinationAddressPrefix": "AzureDatabricks",
              "access": "Allow",
              "priority": 100,
              "direction": "Outbound"
            }
          },
          {
            "name": "Microsoft.Databricks-workspaces_UseOnly_databricks-worker-to-sql",
            "properties": {
              "description": "Required for workers communication with Azure SQL services.",
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "destinationPortRange": "3306",
              "sourceAddressPrefix": "VirtualNetwork",
              "destinationAddressPrefix": "Sql",
              "access": "Allow",
              "priority": 101,
              "direction": "Outbound"
            }
          },
          {
            "name": "Microsoft.Databricks-workspaces_UseOnly_databricks-worker-to-storage",
            "properties": {
              "description": "Required for workers communication with Azure Storage services.",
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "destinationPortRange": "443",
              "sourceAddressPrefix": "VirtualNetwork",
              "destinationAddressPrefix": "Storage",
              "access": "Allow",
              "priority": 102,
              "direction": "Outbound"
            }
          },
          {
            "name": "Microsoft.Databricks-workspaces_UseOnly_databricks-worker-to-worker-outbound",
            "properties": {
              "description": "Required for worker nodes communication within a cluster.",
              "protocol": "*",
              "sourcePortRange": "*",
              "destinationPortRange": "*",
              "sourceAddressPrefix": "VirtualNetwork",
              "destinationAddressPrefix": "VirtualNetwork",
              "access": "Allow",
              "priority": 103,
              "direction": "Outbound"
            }
          },
          {
            "name": "Microsoft.Databricks-workspaces_UseOnly_databricks-worker-to-eventhub",
            "properties": {
              "description": "Required for worker communication with Azure Eventhub services.",
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "destinationPortRange": "9093",
              "sourceAddressPrefix": "VirtualNetwork",
              "destinationAddressPrefix": "EventHub",
              "access": "Allow",
              "priority": 104,
              "direction": "Outbound"
            }
          }
        ]
      }
    },
    {
      "type": "Microsoft.Network/publicIPAddresses",
      "apiVersion": "2023-09-01",
      "name": "[parameters('publicIpName')]",
      "location": "[parameters('location')]",
      "sku": {
          "name": "Standard"
        },
      "properties": {
          "publicIPAddressVersion": "IPv4",
          "publicIPAllocationMethod": "Static",
          "idleTimeoutInMinutes": 4
      }
    },
    {
      "type": "Microsoft.Network/natGateways",
      "apiVersion": "2023-09-01",
      "name": "[parameters('natGatewayName')]",
      "location": "[parameters('location')]",
      "sku": {
            "name": "Standard"
      },
      "properties": {
          "idleTimeoutInMinutes": 4,
          "publicIpAddresses": [
              {
                  "id": "[resourceId('Microsoft.Network/publicIPAddresses', parameters('publicIpName'))]"
              }
          ]
      },
      "dependsOn": [
      "[resourceId('Microsoft.Network/publicIPAddresses', parameters('publicIpName'))]"
      ]
    },
    {
      "type": "Microsoft.Network/virtualNetworks",
      "apiVersion": "2024-05-01",
      "name": "[parameters('vnetName')]",
      "location": "[parameters('location')]",
      "properties": {
        "addressSpace": {
          "addressPrefixes": [
            "[parameters('vnetCidr')]"
          ]
        },
        "subnets": [
          {
            "name": "[parameters('publicSubnetName')]",
            "properties": {
              "addressPrefix": "[parameters('publicSubnetCidr')]",
              "networkSecurityGroup": {
                "id": "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('nsgName'))]"
              },
              "defaultOutboundAccess": false,
              "natGateway": {
                  "id": "[resourceId('Microsoft.Network/natGateways', parameters('natGatewayName'))]"
              },
              "delegations": [
                {
                  "name": "databricks-del-public",
                  "properties": {
                    "serviceName": "Microsoft.Databricks/workspaces"
                  }
                }
              ]
            }
          },
          {
            "name": "[parameters('privateSubnetName')]",
            "properties": {
              "addressPrefix": "[parameters('privateSubnetCidr')]",
              "networkSecurityGroup": {
                "id": "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('nsgName'))]"
              },
              "defaultOutboundAccess": false,
              "natGateway": {
                  "id": "[resourceId('Microsoft.Network/natGateways', parameters('natGatewayName'))]"
              },
              "delegations": [
                {
                  "name": "databricks-del-private",
                  "properties": {
                    "serviceName": "Microsoft.Databricks/workspaces"
                  }
                }
              ]
            }
          },
          {
            "name": "[parameters('PrivateEndpointSubnetName')]",
            "properties": {
              "addressPrefix": "[parameters('privateEndpointSubnetCidr')]",
              "privateEndpointNetworkPolicies": "Disabled",
              "defaultOutboundAccess": false
            }
          }
        ]
      },
      "dependsOn": [
          "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('nsgName'))]",
          "[resourceId('Microsoft.Network/natGateways', parameters('natGatewayName'))]"
      ]
    },
    {
      "type": "Microsoft.Databricks/workspaces",
      "apiVersion": "2024-05-01",
      "name": "[parameters('workspaceName')]",
      "location": "[parameters('location')]",
      "sku": {
        "name": "[parameters('pricingTier')]"
      },
      "properties": {
        "managedResourceGroupId": "[variables('managedResourceGroupId')]",
        "accessConnector": {
          "id": "[resourceId('Microsoft.Databricks/accessConnectors', parameters('accessConnectorName'))]",
          "identityType": "SystemAssigned"
        },
        "defaultStorageFirewall": "Enabled",
        "parameters": {
          "customVirtualNetworkId": {
            "value": "[resourceId('Microsoft.Network/virtualNetworks', parameters('vnetName'))]"
          },
          "customPublicSubnetName": {
            "value": "[parameters('publicSubnetName')]"
          },
          "customPrivateSubnetName": {
            "value": "[parameters('privateSubnetName')]"
          },
          "enableNoPublicIp": {
            "value": "[parameters('disablePublicIp')]"
          }
        },
        "publicNetworkAccess": "[parameters('publicNetworkAccess')]",
        "requiredNsgRules": "[parameters('requiredNsgRules')]"
      },
      "dependsOn": [
        "[resourceId('Microsoft.Databricks/accessConnectors', parameters('accessConnectorName'))]",
        "[resourceId('Microsoft.Network/virtualNetworks', parameters('vnetName'))]"
      ]
    },
    {
      "type": "Microsoft.Network/privateEndpoints",
      "apiVersion": "2021-08-01",
      "name": "[variables('privateEndpointName')]",
      "location": "[parameters('location')]",
      "properties": {
        "subnet": {
          "id": "[resourceId('Microsoft.Network/virtualNetworks/subnets', parameters('vnetName'), parameters('PrivateEndpointSubnetName'))]"
        },
        "privateLinkServiceConnections": [
          {
            "name": "[variables('privateEndpointName')]",
            "properties": {
              "privateLinkServiceId": "[resourceId('Microsoft.Databricks/workspaces', parameters('workspaceName'))]",
              "groupIds": [
                "databricks_ui_api"
              ]
            }
          }
        ]
      },
      "dependsOn": [
        "[resourceId('Microsoft.Databricks/workspaces', parameters('workspaceName'))]"
      ]
    },
    {
      "type": "Microsoft.Network/privateDnsZones",
      "apiVersion": "2020-06-01",
      "name": "[variables('privateDnsZoneName')]",
      "location": "global",
      "dependsOn": [
        "[resourceId('Microsoft.Network/privateEndpoints', variables('privateEndpointName'))]"
      ]
    },
    {
      "type": "Microsoft.Network/privateDnsZones/virtualNetworkLinks",
      "apiVersion": "2020-06-01",
      "name": "[format('{0}/{1}', variables('privateDnsZoneName'), format('{0}-link', variables('privateDnsZoneName')))]",
      "location": "global",
      "properties": {
        "registrationEnabled": false,
        "virtualNetwork": {
          "id": "[resourceId('Microsoft.Network/virtualNetworks', parameters('vnetName'))]"
        }
      },
      "dependsOn": [
        "[resourceId('Microsoft.Network/privateDnsZones', variables('privateDnsZoneName'))]",
        "[resourceId('Microsoft.Network/virtualNetworks', parameters('vnetName'))]"
      ]
    },
    {
      "type": "Microsoft.Network/privateEndpoints/privateDnsZoneGroups",
      "apiVersion": "2021-12-01",
      "name": "[variables('pvtEndpointDnsGroupName')]",
      "properties": {
        "privateDnsZoneConfigs": [
          {
            "name": "config1",
            "properties": {
              "privateDnsZoneId": "[resourceId('Microsoft.Network/privateDnsZones', variables('privateDnsZoneName'))]"
            }
          }
        ]
      },
      "dependsOn": [
        "[resourceId('Microsoft.Network/privateDnsZones', variables('privateDnsZoneName'))]",
        "[resourceId('Microsoft.Network/privateEndpoints', variables('privateEndpointName'))]"
      ]
    }
  ]
}
